plugins {
    id 'java'
    id 'org.xbib.gradle.plugin.jflex' version '1.2.0'
    id 'org.xbib.gradle.plugin.jacc' version '1.1.3'
}

group 'decaf'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_12

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenCentral()
}

dependencies {
}

